--- a/add.html
+++ b/add.html
@@ -33,7 +33,7 @@
         </div>
         <div class="burger-menu">
             <button class="burger-button">
-                <img style="height: 50%;" src="static/img/burger-menu.png" alt="">
+                <img style="height: 50%;" src="static/img/burger-menu.svg" alt="">
             </button>
             <div class="burger-panel-icons">
                 <a href="index.html">Главная</a>
@@ -95,7 +95,7 @@
             <textarea rows="2"
                 placeholder="Здесь укажите дополнительную информацию (например, описание обстоятельств, при которых было найдено животное, порода, кличка и т.д.)"
                 minlength="2" maxlength="255"></textarea>
-                <span class="form-error">Недопустимое количество символов!</span>
+            <span class="form-error">Недопустимое количество символов!</span>
             <label>Клеймо (при наличии)</label>
             <input type="text" placeholder=" ">
             <label>Район</label>
