--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <div class="burger-menu">
             <button class="burger-button">
-                <img style="height: 50%;" src="static/img/burger-menu.png" alt="">
+                <img style="height: 50%;" src="static/img/burger-menu.svg" alt="">
             </button>
             <div class="burger-panel-icons">
                 <a href="index.html">Главная</a>
