--- a/orders-management.html
+++ b/orders-management.html
@@ -29,7 +29,7 @@
         </div>
         <div class="burger-menu">
             <button class="burger-button">
-                <img style="height: 50%;" src="static/img/burger-menu.png" alt="">
+                <img style="height: 50%;" src="static/img/burger-menu.svg" alt="">
             </button>
             <div class="burger-panel-icons">
                 <a href="">Личный кабинет</a>
@@ -39,35 +39,35 @@
         </div>
     </nav>
 
-        <!-- Подвал сайта -->
-        <footer>
-            <div class="footer-items">
-                <img src="static/img/logo.png" alt="">
-                <div class="footer-items-link">
-                    <div class="footer-item">
-                        <p>МЕНЮ</p>
-                        <a class="footer-link" href="index.html">Главная</a>
-                        <a class="footer-link" href="register.html">Регистрация</a>
-                        <a class="footer-link" href="login.html">Авторизация</a>
-                        <a class="footer-link" href="profile.html">Личный кабинет</a>
-                        <a class="footer-link" href="pet.html">Найденное животное</a>
-                        <a class="footer-link" href="search.html">Поиск</a>
+    <!-- Подвал сайта -->
+    <footer>
+        <div class="footer-items">
+            <img src="static/img/logo.png" alt="">
+            <div class="footer-items-link">
+                <div class="footer-item">
+                    <p>МЕНЮ</p>
+                    <a class="footer-link" href="index.html">Главная</a>
+                    <a class="footer-link" href="register.html">Регистрация</a>
+                    <a class="footer-link" href="login.html">Авторизация</a>
+                    <a class="footer-link" href="profile.html">Личный кабинет</a>
+                    <a class="footer-link" href="pet.html">Найденное животное</a>
+                    <a class="footer-link" href="search.html">Поиск</a>
+                </div>
+                <div class="footer-item no-border">
+                    <p>СВЯЗЬ С НАМИ</p>
+                    <div class="footer-item-block">
+                        <img src="static/img/footer-email.svg" alt="">
+                        <p>mail@newlife.ru</p>
                     </div>
-                    <div class="footer-item no-border">
-                        <p>СВЯЗЬ С НАМИ</p>
-                        <div class="footer-item-block">
-                            <img src="static/img/footer-email.svg" alt="">
-                            <p>mail@newlife.ru</p>
-                        </div>
-                        <div class="footer-item-block">
-                            <img src="static/img/footer-phone.svg" alt="">
-                            <p>8 (800)123-45-67</p>
-                        </div>
+                    <div class="footer-item-block">
+                        <img src="static/img/footer-phone.svg" alt="">
+                        <p>8 (800)123-45-67</p>
                     </div>
                 </div>
             </div>
-            <p>&copy 2024 "Новая жизнь"</p>
-        </footer>
+        </div>
+        <p>&copy 2024 "Новая жизнь"</p>
+    </footer>
 
 </body>
 
