--- a/add.html
+++ b/add.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="static/img/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -44,7 +45,7 @@
         </div>
     </nav>
 
-    <div class="container" style="padding-top: 20px;">
+    <div class="container" style="padding-top: 20px; min-height: 90vh;">
         <p class="bold-text" style="text-align: center; padding-left: 0;">ДОБАВЛЕНИЕ ОБЪЯВЛЕНИЯ</p>
         <form class="form-container">
             <label>Номер телефона</label>
