--- a/add.html
+++ b/add.html
@@ -56,7 +56,7 @@
             <span class="form-error">Неверный формат! Введите почту в формате mail@example.ru</span>
             <div class="registration-container">
                 <input type="checkbox" id="registerCheckbox" class="checkbox-auto-reg">
-                <label for="registerCheckbox" class="label-auto-reg">Автоматическая Регистрация</label>
+                <label for="registerCheckbox" class="label-auto-reg">Автоматическая регистрация</label>
                 <div class="form-container" id="form-container-hide">
                     <label>Пароль</label>
                     <input type="password" placeholder="Введите пароль">
@@ -90,7 +90,7 @@
                     </div>
                 </div>
             </div>
-            <label id="file-load-label" for="upload">Выбрать фото</label>
+            <label id="file-load-label" for="upload">ВЫБРАТЬ ФОТО</label>
             <input class="file-load" type="file" id="upload" hidden />
             <label>Дополнительная информация</label>
             <textarea rows="2"
