--- a/profile.html
+++ b/profile.html
@@ -64,7 +64,7 @@
                 <div class="info-no-edit">
                     <p>Количество объявлений: <span>10</span></p>
                     <p>Количество найденных животных: <span>10</span></p>
-                    <p>Дата регистрации: <span>дд.мм.гг</span></p>
+                    <p>Дата регистрации: <span>дд.мм.гггг</span></p>
                     <p>Дни на сайте: <span>100</span></p>
                 </div>
             </div>
@@ -84,7 +84,7 @@
                         </div>
                         <div class="card-info">
                             <img src="static/img/phone.svg" alt="">
-                            <p>+7 (999) 999-99-99</p>
+                            <p>8 (999) 999-99-99</p>
                         </div>
                         <div class="card-info">
                             <img src="static/img/date.svg" alt="">
@@ -112,7 +112,7 @@
                         </div>
                         <div class="card-info">
                             <img src="static/img/phone.svg" alt="">
-                            <p>+7 (999) 999-99-99</p>
+                            <p>8 (999) 999-99-99</p>
                         </div>
                         <div class="card-info">
                             <img src="static/img/date.svg" alt="">
@@ -146,7 +146,7 @@
                         </div>
                         <div class="card-info">
                             <img src="static/img/phone.svg" alt="">
-                            <p>+7 (999) 999-99-99</p>
+                            <p>8 (999) 999-99-99</p>
                         </div>
                         <div class="card-info">
                             <img src="static/img/date.svg" alt="">
@@ -174,7 +174,7 @@
                         </div>
                         <div class="card-info">
                             <img src="static/img/phone.svg" alt="">
-                            <p>+7 (999) 999-99-99</p>
+                            <p>8 (999) 999-99-99</p>
                         </div>
                         <div class="card-info">
                             <img src="static/img/date.svg" alt="">
@@ -208,7 +208,7 @@
                         </div>
                         <div class="card-info">
                             <img src="static/img/phone.svg" alt="">
-                            <p>+7 (999) 999-99-99</p>
+                            <p>8 (999) 999-99-99</p>
                         </div>
                         <div class="card-info">
                             <img src="static/img/date.svg" alt="">
@@ -232,7 +232,7 @@
                         </div>
                         <div class="card-info">
                             <img src="static/img/phone.svg" alt="">
-                            <p>+7 (999) 999-99-99</p>
+                            <p>8 (999) 999-99-99</p>
                         </div>
                         <div class="card-info">
                             <img src="static/img/date.svg" alt="">
@@ -263,7 +263,7 @@
                         </div>
                         <div class="card-info">
                             <img src="static/img/phone.svg" alt="">
-                            <p>+7 (999) 999-99-99</p>
+                            <p>8 (999) 999-99-99</p>
                         </div>
                         <div class="card-info">
                             <img src="static/img/date.svg" alt="">
@@ -287,7 +287,7 @@
                         </div>
                         <div class="card-info">
                             <img src="static/img/phone.svg" alt="">
-                            <p>+7 (999) 999-99-99</p>
+                            <p>8 (999) 999-99-99</p>
                         </div>
                         <div class="card-info">
                             <img src="static/img/date.svg" alt="">
