--- a/search.html
+++ b/search.html
@@ -76,11 +76,11 @@
                     </div>
                     <div class="card-info">
                         <img src="static/img/phone.svg" alt="">
-                        <p>+7 (999) 999-99-99</p>
+                        <p>8 (999) 999-99-99</p>
                     </div>
                     <div class="card-info">
                         <img src="static/img/date.svg" alt="">
-                        <p>дд.мм.гггг</p>
+                        <p>дд.мм.гггггг</p>
                     </div>
                     <div class="card-info">
                         <img src="static/img/user.svg" alt="">
@@ -104,11 +104,11 @@
                     </div>
                     <div class="card-info">
                         <img src="static/img/phone.svg" alt="">
-                        <p>+7 (999) 999-99-99</p>
+                        <p>8 (999) 999-99-99</p>
                     </div>
                     <div class="card-info">
                         <img src="static/img/date.svg" alt="">
-                        <p>дд.мм.гггг</p>
+                        <p>дд.мм.гггггг</p>
                     </div>
                     <div class="card-info">
                         <img src="static/img/user.svg" alt="">
@@ -132,11 +132,11 @@
                     </div>
                     <div class="card-info">
                         <img src="static/img/phone.svg" alt="">
-                        <p>+7 (999) 999-99-99</p>
+                        <p>8 (999) 999-99-99</p>
                     </div>
                     <div class="card-info">
                         <img src="static/img/date.svg" alt="">
-                        <p>дд.мм.гггг</p>
+                        <p>дд.мм.гггггг</p>
                     </div>
                     <div class="card-info">
                         <img src="static/img/user.svg" alt="">
@@ -160,11 +160,11 @@
                     </div>
                     <div class="card-info">
                         <img src="static/img/phone.svg" alt="">
-                        <p>+7 (999) 999-99-99</p>
+                        <p>8 (999) 999-99-99</p>
                     </div>
                     <div class="card-info">
                         <img src="static/img/date.svg" alt="">
-                        <p>дд.мм.гггг</p>
+                        <p>дд.мм.гггггг</p>
                     </div>
                     <div class="card-info">
                         <img src="static/img/user.svg" alt="">
@@ -188,11 +188,11 @@
                     </div>
                     <div class="card-info">
                         <img src="static/img/phone.svg" alt="">
-                        <p>+7 (999) 999-99-99</p>
+                        <p>8 (999) 999-99-99</p>
                     </div>
                     <div class="card-info">
                         <img src="static/img/date.svg" alt="">
-                        <p>дд.мм.гггг</p>
+                        <p>дд.мм.гггггг</p>
                     </div>
                     <div class="card-info">
                         <img src="static/img/user.svg" alt="">
@@ -216,11 +216,11 @@
                     </div>
                     <div class="card-info">
                         <img src="static/img/phone.svg" alt="">
-                        <p>+7 (999) 999-99-99</p>
+                        <p>8 (999) 999-99-99</p>
                     </div>
                     <div class="card-info">
                         <img src="static/img/date.svg" alt="">
-                        <p>дд.мм.гггг</p>
+                        <p>дд.мм.гггггг</p>
                     </div>
                     <div class="card-info">
                         <img src="static/img/user.svg" alt="">
@@ -244,11 +244,11 @@
                     </div>
                     <div class="card-info">
                         <img src="static/img/phone.svg" alt="">
-                        <p>+7 (999) 999-99-99</p>
+                        <p>8 (999) 999-99-99</p>
                     </div>
                     <div class="card-info">
                         <img src="static/img/date.svg" alt="">
-                        <p>дд.мм.гггг</p>
+                        <p>дд.мм.гггггг</p>
                     </div>
                     <div class="card-info">
                         <img src="static/img/user.svg" alt="">
@@ -272,11 +272,11 @@
                     </div>
                     <div class="card-info">
                         <img src="static/img/phone.svg" alt="">
-                        <p>+7 (999) 999-99-99</p>
+                        <p>8 (999) 999-99-99</p>
                     </div>
                     <div class="card-info">
                         <img src="static/img/date.svg" alt="">
-                        <p>дд.мм.гггг</p>
+                        <p>дд.мм.гггггг</p>
                     </div>
                     <div class="card-info">
                         <img src="static/img/user.svg" alt="">
