--- a/login.html
+++ b/login.html
@@ -45,7 +45,7 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container" style="min-height: 400px;">
         <p class="bold-text-2">АВТОРИЗАЦИЯ</p>
         <form class="form-container">
             <label>Адрес электронной почты</label>
