--- a/pet.html
+++ b/pet.html
@@ -84,7 +84,7 @@
                         </div>
                         <div class="pet-info">
                             <img src="static/img/date.svg" alt="">
-                            <p>дд.мм.гг</p>
+                            <p>дд.мм.гггг</p>
                         </div>
                     </div>
                 </div>
@@ -108,7 +108,7 @@
                         </div>
                         <div class="card-info">
                             <img src="static/img/phone.svg" alt="">
-                            <p>+7 (999) 999-99-99</p>
+                            <p>8 (999) 999-99-99</p>
                         </div>
                         <div class="card-info">
                             <img src="static/img/date.svg" alt="">
@@ -129,7 +129,7 @@
                         </div>
                         <div class="card-info">
                             <img src="static/img/phone.svg" alt="">
-                            <p>+7 (999) 999-99-99</p>
+                            <p>8 (999) 999-99-99</p>
                         </div>
                         <div class="card-info">
                             <img src="static/img/date.svg" alt="">
@@ -150,7 +150,7 @@
                         </div>
                         <div class="card-info">
                             <img src="static/img/phone.svg" alt="">
-                            <p>+7 (999) 999-99-99</p>
+                            <p>8 (999) 999-99-99</p>
                         </div>
                         <div class="card-info">
                             <img src="static/img/date.svg" alt="">
@@ -171,7 +171,7 @@
                         </div>
                         <div class="card-info">
                             <img src="static/img/phone.svg" alt="">
-                            <p>+7 (999) 999-99-99</p>
+                            <p>8 (999) 999-99-99</p>
                         </div>
                         <div class="card-info">
                             <img src="static/img/date.svg" alt="">
