--- a/register.html
+++ b/register.html
@@ -45,7 +45,7 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container" style="min-height: 800px;">
         <p class="bold-text-2">РЕГИСТРАЦИЯ</p>
         <form class="form-container">
             <label>Адрес электронной почты</label>
